--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo_site",
+  "name": "react_test",
   "version": "1.0.0",
   "description": "for_centinela",
   "main": "index.js",
@@ -31,6 +31,12 @@
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
