--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "pg": "^7.12.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
     "request": "^2.88.0",
     "sequelize": "^5.12.2"
   }
