--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
     "pg": "^7.12.0",
     "prop-types": "^15.7.2",
     "react-redux": "^7.1.0",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.0",
-    "sequelize": "^5.12.2"
+    "sequelize": "^5.19.0"
   }
 }
