add Oauth along with react router. Next Item is to update React Router have correct server route

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,7 @@ DATABASE_USER=yourdatabase
 DATABASE_PASSWORD=yourpassword
 HOST=yourhost
 SERVER_PORT=yourport
+NODE_ENV=development || Production
+OAUTH_DEV_DOM=YOUR KEY
+OAUTH_CLIENT_ID=YOUR ID
 API_KEY=yourapikey
