--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
   },
   "dependencies": {
     "ajax": "0.0.4",
+    "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "braces": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "history": "^4.10.1",
     "morgan": "^1.9.1",
     "pg": "^7.12.0",
     "prop-types": "^15.7.2",
