--- a/package.json
+++ b/package.json
@@ -32,16 +32,15 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
     "eslint": "^6.1.0",
-    "eslint-config-airbnb": "^18.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "prettier-tslint": "^0.4.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.38.0",
@@ -60,8 +59,10 @@
     "morgan": "^1.9.1",
     "pg": "^7.12.0",
     "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.14",
     "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
