--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,11 @@
 {
   "plugins": ["import", "prettier", "jsx-a11y", "react"],
-  "extends": ["airbnb-base", "plugin:import/errors", "plugin:import/warnings", "plugin:react/recommended"],
+  "extends": [
+    "airbnb-base",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:react/recommended"
+  ],
   "env": {
     "browser": true,
     "node": true
