--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "scss-dev": "node-sass --watch client/src/styles -o client/dist/styles/ ",
     "scss": "node-sass client/src/styles -o client/dist/styles/",
     "test": "jest --verbose --passWithNoTests --detectOpenHandles",
-    "seed": "node database/seed/seedFunction.js"
+    "seed": "node database/seed/seedFunction.js",
+    "hot": "webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
@@ -44,7 +45,9 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
     "ajax": "0.0.4",
@@ -56,6 +59,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "history": "^4.10.1",
+    "html-webpack-plugin": "^3.2.0",
     "morgan": "^1.9.1",
     "pg": "^7.12.0",
     "prop-types": "^15.7.2",
