--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
     "pg": "^7.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
