--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "body-parser": "^1.19.0",
     "braces": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
