--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
     "ajax": "0.0.4",
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
