--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
     "ajax": "0.0.4",
     "auth0-js": "^9.11.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "braces": "^3.0.2",
+    "clsx": "^1.0.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
