Update password adornment with material ui

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "webpack": "webpack",
     "react-dev": "webpack -w",
-    "start": "nodemon server/server.js",
+    "start": "node server/server.js",
     "scss-dev": "node-sass --watch client/src/styles -o client/dist/styles/ ",
     "scss": "node-sass client/src/styles -o client/dist/styles/",
     "test": "jest --verbose --passWithNoTests --detectOpenHandles",
